<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/bookmarkActivity"
                android:icon="@drawable/ic_bookmarks"
                android:title="@string/bookmark"
                app:iconTint="?android:colorPrimary" />

            <item
                android:id="@+id/settingActivity"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting"
                app:iconTint="?android:colorPrimary" />
        </menu>
    </item>
</menu>